--- a/meccsek.html
+++ b/meccsek.html
@@ -10,176 +10,220 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;500;800&display=swap" rel="stylesheet">
     <style>
-      :root {
-            --bg: #020617;
-            --glass: rgba(15, 23, 42, 0.75);
-            --neon-green: #00ff88;
-            --neon-blue: #0ea5e9;
-            --neon-red: #ff3e3e;
-            --text: #f1f5f9;
-            --border: rgba(255, 255, 255, 0.1);
-            --cl-gs: #0044ff; --el-gs: #cc7a00; --ecl-q: #00cc6a; --po: #d35400; --rel: #ff3e3e;
-        }
-
-        body.light {
-            --bg: #f8fafc;
-            --glass: rgba(255, 255, 255, 0.85);
-            --text: #0f172a;
-            --border: rgba(0, 0, 0, 0.1);
-            --neon-blue: #0284c7;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-
-        body { background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; height: 100vh; overflow: hidden; position: relative; transition: background 0.5s; }
-
-        .bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden; filter: blur(100px); opacity: 0.5; }
-        .blob { position: absolute; width: 600px; height: 600px; border-radius: 50%; mix-blend-mode: screen; animation: move 25s infinite alternate ease-in-out; }
-        .blob-1 { background: var(--cl-gs); top: -10%; left: -10%; }
-        .blob-2 { background: var(--neon-green); bottom: -10%; right: -10%; animation-delay: -5s; }
-        .blob-3 { background: var(--el-gs); top: 30%; left: 30%; animation-delay: -10s; }
-        @keyframes move { 0% { transform: translate(0, 0) scale(1); } 100% { transform: translate(10vw, 10vh) scale(1.2); } }
-
-        #goal-banner {
-            position: fixed; top: -100px; left: 0; right: 0; height: 65px; z-index: 9999 !important;
-            background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
-            font-family: 'Orbitron'; font-weight: 900; font-size: 1.6rem; z-index: 2000; 
-            transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); box-shadow: 0 0 50px rgba(0,255,136,0.6);
-        }
-        #goal-banner.show { top: 75px; }
-
-        nav { 
-            position: fixed; top: 0; left: 0; right: 0; height: 75px; 
-            display: flex; justify-content: space-between; align-items: center; 
-            padding: 0 30px; background: var(--glass); backdrop-filter: blur(20px); 
-            border-bottom: 1px solid var(--border); z-index: 1000; 
-        }
-        .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
-
-        .nav-tools { display: flex; gap: 10px; }
-        .tool-btn { 
-            background: rgba(255,255,255,0.05); border: 1px solid var(--border);
-            color: var(--text); padding: 8px 14px; border-radius: 10px;
-            cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
-        }
-        .tool-btn:hover { border-color: var(--neon-blue); background: rgba(14, 165, 233, 0.2); }
-
-        .main-wrapper { display: flex; height: 100vh; padding-top: 75px; }
-        .sidebar, .standings-sidebar { background: var(--glass); backdrop-filter: blur(25px); overflow-y: auto; border: 1px solid var(--border); }
-        .sidebar { width: 300px; }
-        .standings-sidebar { width: 430px; padding: 20px; }
-
-        .sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
-
-        .content-area { flex: 1; overflow-y: auto; padding: 25px; scrollbar-width: none; }
-
-        .match-card {
-            background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
-            padding: 20px; margin-bottom: 15px; display: flex; align-items: center; transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .match-card:hover { border-color: var(--neon-blue); background: rgba(30, 41, 59, 0.6); transform: translateY(-4px); }
-
-        .team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 8px; cursor: pointer; }
-        .team-link img { width: 55px; height: 55px; object-fit: contain; transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        .team-link:hover img { transform: rotate(15deg) scale(1.2); filter: drop-shadow(0 0 12px var(--neon-blue)); }
-        .team-link span { font-weight: 800; font-family: 'Orbitron'; font-size: 11px; text-align: center; }
-
-        .score-display { font-family: 'Orbitron'; font-size: 2.2rem; font-weight: 900; color: var(--neon-green); }
-        .score-live { color: var(--neon-red); animation: pulse 1s infinite; text-shadow: 0 0 15px var(--neon-red); }
-      @keyframes goal-pulse {
-    0% { 
-        box-shadow: 0 0 5px #ff3e3e, inset 0 0 5px #ff3e3e; 
-        border-color: #ff3e3e;
-        transform: scale(1);
-    }
-    50% { 
-        box-shadow: 0 0 40px #ff3e3e, inset 0 0 20px #ff3e3e; 
-        border-color: #ff4d4d;
-        transform: scale(1.02); /* Kicsit megugrik a kártya */
-    }
-    100% { 
-        box-shadow: 0 0 5px #ff3e3e, inset 0 0 5px #ff3e3e; 
-        border-color: #ff3e3e;
-        transform: scale(1);
-    }
-}
-.mobile-quick-nav {
-    z-index: 9000 !important;
-    position: fixed !important;
-    bottom: 20px; /* Biztosítsd, hogy ne lógjon ki alul */
-}
-.match-card.goal-highlight {
-    animation: goal-pulse 0.8s ease-in-out infinite !important;
-    border: 2px solid #ff3e3e !important;
-    background: rgba(255, 62, 62, 0.15) !important; /* Kap egy enyhe pirosas hátteret is */
-    z-index: 100; /* Hogy a többi kártya fölé emelkedjen */
-    position: relative;
+     :root {
+    --bg: #020617;
+    --glass: rgba(15, 23, 42, 0.75);
+    --neon-green: #00ff88;
+    --neon-blue: #0ea5e9;
+    --neon-red: #ff3e3e;
+    --text: #f1f5f9;
+    --border: rgba(255, 255, 255, 0.1);
+    --cl-gs: #0044ff; --el-gs: #cc7a00; --ecl-q: #00cc6a; --po: #d35400; --rel: #ff3e3e;
+    --sidebar-w: 75px;
+    --sidebar-expand: 280px;
 }
 
-        .standings-table { width: 100%; border-collapse: separate; border-spacing: 0 6px; }
-        .standings-table td { padding: 14px 8px; background: rgba(255,255,255,0.03); text-align: center; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); font-size: 12px; }
-        .pos-col { border-left-width: 5px !important; border-left-style: solid !important; }
-
-        .pos-num-box { 
-            width: 34px; height: 34px; line-height: 34px; margin: 0 auto; 
-            border-radius: 8px; font-weight: 900; font-family: 'Orbitron'; font-size: 12px; 
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-        }
-        .zone-tag { font-size: 8px; font-family: 'Orbitron'; display: block; margin-bottom: 4px; font-weight: 900; }
-        .highlight td { background: rgba(0, 255, 136, 0.15) !important; border-color: var(--neon-green) !important; }
-
-        .league-item { margin: 8px 15px; padding: 12px 15px; border-radius: 14px; display: flex; align-items: center; gap: 12px; cursor: pointer; transition: 0.3s; border: 1px solid transparent; }
-        .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
-
-        .date-strip { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; scrollbar-width: none; }
-        .date-pill { flex: 0 0 auto; padding: 10px 18px; border-radius: 12px; background: rgba(255,255,255,0.03); border: 1px solid var(--border); cursor: pointer; font-family: 'Orbitron'; font-size: 10px; }
-        .date-pill.active { border-color: var(--neon-green); color: var(--neon-green); background: rgba(0,255,136,0.05); }
-        .date-pill.is-today { border-color: var(--neon-blue); color: var(--neon-blue); border-width: 2px; }
-
-        .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
-        @media (max-width: 1100px) {
-            .sidebar, .standings-sidebar { position: fixed; top: 75px; bottom: 70px; width: 85%; z-index: 1050; transform: translateX(-105%); background: var(--bg); }
-            .standings-sidebar { right: 0; transform: translateX(105%); }
-            .sidebar.open, .standings-sidebar.open { transform: translateX(0); }
-            .mobile-nav { display: flex; }
-        }
-@keyframes goal-flash {
-    0% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
-    50% { background-color: rgba(255, 62, 62, 0.3); transform: scale(1); }
-    100% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
+body.light {
+    --bg: #f8fafc;
+    --glass: rgba(255, 255, 255, 0.85);
+    --text: #0f172a;
+    --border: rgba(0, 0, 0, 0.1);
+    --neon-blue: #0284c7;
 }
 
-/* Az egész kártya ÉS a benne lévő összes div villogjon */
-.match-card.goal-highlight, 
-.match-card.goal-highlight div, 
-.match-card.goal-highlight span {
-    animation: goal-flash 0.5s ease-in-out infinite !important;
-    color: white !important; /* Gól alatt legyen fehér a szöveg a jobb olvashatóságért */
-    border-color: #ffffff !important;
+* { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+
+body { 
+    background: var(--bg); 
+    color: var(--text); 
+    font-family: 'Inter', sans-serif; 
+    min-height: 100vh; 
+    overflow-x: hidden; 
+    transition: background 0.5s; 
 }
 
-.match-card.goal-highlight {
-    z-index: 1000;
-    position: relative;
-    box-shadow: 0 0 50px rgba(255, 62, 62, 0.8);
+/* Háttér animáció */
+.bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden; filter: blur(100px); opacity: 0.5; }
+.blob { position: absolute; width: 600px; height: 600px; border-radius: 50%; mix-blend-mode: screen; animation: move 25s infinite alternate ease-in-out; }
+.blob-1 { background: var(--cl-gs); top: -10%; left: -10%; }
+.blob-2 { background: var(--neon-green); bottom: -10%; right: -10%; animation-delay: -5s; }
+.blob-3 { background: var(--el-gs); top: 30%; left: 30%; animation-delay: -10s; }
+@keyframes move { 0% { transform: translate(0, 0) scale(1); } 100% { transform: translate(10vw, 10vh) scale(1.2); } }
+
+/* Goal Banner */
+#goal-banner {
+    position: fixed; top: -100px; left: 0; right: 0; height: 65px; z-index: 9999;
+    background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
+    font-family: 'Orbitron'; font-weight: 900; font-size: 1.6rem;
+    transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); box-shadow: 0 0 50px rgba(0,255,136,0.6);
 }
-      .odds-btn {
-    background: rgba(255, 255, 255, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 4px;
-    color: white;
-    transition: all 0.2s;
+#goal-banner.show { top: 75px; }
+
+/* Navigáció */
+nav { 
+    position: fixed; top: 0; left: 0; right: 0; height: 75px; 
+    display: flex; justify-content: space-between; align-items: center; 
+    padding: 0 30px; background: var(--glass); backdrop-filter: blur(20px); 
+    border-bottom: 1px solid var(--border); z-index: 2000; 
+}
+.logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
+
+/* Elrendezés váz */
+.main-wrapper {
+    display: flex;
+    justify-content: center; /* Ez teszi középre a meccseket PC-n */
+    width: 100%;
+    min-height: 100vh;
+    padding-top: 75px;
+}
+
+/* SIDEBAR - Bal oldali bajnokság lista */
+.sidebar {
+    position: fixed;
+    left: 0; top: 75px; bottom: 0;
+    width: var(--sidebar-w);
+    background: var(--glass);
+    backdrop-filter: blur(25px);
+    z-index: 1500;
+    transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: hidden;
+    border-right: 1px solid var(--border);
+    display: flex;
+    flex-direction: column;
+}
+.sidebar:hover { width: var(--sidebar-expand); }
+
+.sidebar-header {
+    display: flex;
+    align-items: center;
+    padding: 20px 12px;
+    gap: 15px;
+    height: 70px;
+    border-bottom: 1px solid rgba(255,255,255,0.05);
+    white-space: nowrap;
+}
+.header-emoji { font-size: 24px; min-width: 50px; text-align: center; }
+.header-text { 
+    font-family: 'Orbitron'; font-size: 11px; letter-spacing: 2px; color: var(--neon-blue);
+    opacity: 0; transition: opacity 0.2s;
+}
+.sidebar:hover .header-text { opacity: 1; }
+
+#league-list { flex: 1; overflow-y: auto; scrollbar-width: none; padding: 10px 0; }
+#league-list::-webkit-scrollbar { display: none; }
+
+.league-item {
+    display: flex;
+    align-items: center;
+    width: calc(var(--sidebar-expand) - 20px);
+    margin: 5px 10px;
+    padding: 10px;
+    border-radius: 12px;
     cursor: pointer;
+    transition: all 0.2s ease;
+}
+.league-item.active { background: rgba(0, 255, 136, 0.08); }
+
+.league-icon-wrapper {
+    width: 48px; height: 48px; flex-shrink: 0;
+    display: flex; align-items: center; justify-content: center;
+    background: rgba(255,255,255,0.03); border: 1px solid var(--border); border-radius: 10px;
+}
+.league-item.active .league-icon-wrapper {
+    border-color: var(--neon-green);
+    box-shadow: 0 0 15px rgba(0, 255, 136, 0.4);
+}
+.league-name-text {
+    margin-left: 15px; font-family: 'Orbitron'; font-size: 11px; font-weight: 500;
+    opacity: 0; transition: opacity 0.2s; white-space: nowrap;
+}
+.sidebar:hover .league-name-text { opacity: 1; }
+
+/* TARTALOM TERÜLET */
+.content-area {
+    width: 100%;
+    max-width: 850px;
+    margin: 0 auto;
+    padding: 30px 20px 100px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.odds-btn:hover {
-    background: rgba(0, 68, 255, 0.4);
-    border-color: #0044ff;
-    transform: translateY(-1px);
+.date-strip {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 25px;
+    overflow-x: auto;
+    scrollbar-width: none;
+}
+.date-pill {
+    flex: 0 0 auto; padding: 10px 18px; border-radius: 12px;
+    background: rgba(255,255,255,0.03); border: 1px solid var(--border);
+    cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
+}
+.date-pill.active { border-color: var(--neon-green); color: var(--neon-green); background: rgba(0,255,136,0.05); }
+
+/* MECCS KÁRTYÁK */
+.match-card {
+    width: 100%;
+    background: rgba(30, 41, 59, 0.4);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--border);
+    border-radius: 24px;
+    padding: 20px 30px;
+    margin-bottom: 15px;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    gap: 20px;
+    transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.match-card:hover { border-color: var(--neon-blue); transform: translateY(-4px); }
+
+.score-display { font-family: 'Orbitron'; font-size: 2.4rem; font-weight: 900; color: var(--neon-green); text-align: center; }
+
+/* Gól animációk */
+@keyframes goal-flash {
+    0% { background-color: rgba(255, 62, 62, 0.9); transform: scale(1.02); }
+    50% { background-color: rgba(255, 62, 62, 0.2); transform: scale(1); }
+    100% { background-color: rgba(255, 62, 62, 0.9); transform: scale(1.02); }
+}
+.match-card.goal-highlight {
+    animation: goal-flash 0.5s ease-in-out infinite !important;
+    z-index: 100;
+    position: relative;
+    box-shadow: 0 0 50px rgba(255, 62, 62, 0.6);
 }
 
-.odds-label { font-size: 9px; opacity: 0.6; margin-bottom: 2px; }
-.odds-val { font-family: 'Orbitron'; font-size: 11px; font-weight: bold; }
+/* Jobb oldali tabella */
+.standings-sidebar {
+    position: fixed;
+    right: 0; top: 75px; bottom: 0;
+    width: 420px;
+    background: var(--glass);
+    backdrop-filter: blur(30px);
+    border-left: 1px solid var(--border);
+    transform: translateX(105%);
+    z-index: 1600;
+    transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    padding: 20px;
+}
+.standings-sidebar.open { transform: translateX(0); }
+        
+      /* Mobil nézet */
+@media (max-width: 1100px) {
+    .sidebar { width: 280px; transform: translateX(-105%); top: 0; padding-top: 20px; }
+    .sidebar.open { transform: translateX(0); }
+    .content-area { padding-top: 20px; }
+    .mobile-nav { 
+        position: fixed; bottom: 0; left: 0; right: 0; height: 70px; 
+        background: var(--glass); display: flex; justify-content: space-around; 
+        align-items: center; z-index: 2000; border-top: 1px solid var(--border); 
+    }
+}
         
     </style>
 </head>
@@ -1286,6 +1330,7 @@ const startAction = (e) => {
     </script>
 </body>
 </html>
+
 
 
 
